# train-manager

./: .gitignore  AGENTS.md  README.md  pyproject.toml
backend/: requirements.txt  run.sh
backend/app/: main.py
backend/app/api/: auth.py  collect.py  corpus.py  directories.py  images.py  labels.py  preprocess.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  corpus.py  directory.py  image.py  label.py  preprocess.py  user.py
backend/app/schemas/: __init__.py  common.py  corpus.py  directory.py  image.py  label.py  preprocess.py  user.py
backend/app/services/: corpus_service.py  data_collector.py  directory_service.py  image_service.py  label_service.py  preprocess_service.py
backend/app/tasks/: engine.py
backend/scripts/: example_description_generator.py  example_label_classifier.py
backend/tests/: conftest.py  test_models.py
docs/superpowers/plans/: 2026-06-04-data-management.md  2026-06-05-directory-management.md
docs/superpowers/specs/: 2026-06-04-data-management-design.md  2026-06-05-directory-management-design.md  2026-06-24-label-management-design.md
frontend/: .env.production.example  index.html  package-lock.json  package.json  run.sh  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/api/: corpus.js  directories.js  images.js  index.js  labels.js  preprocess.js
frontend/src/components/: ImageGrid.vue  LabelPanel.vue
frontend/src/router/: index.js
frontend/src/views/: Corpus.vue  Images.vue  Labeling.vue  Labels.vue  (+1 more)
scripts/: init.sh  migrate_labels_parent_id.sh
