[project]
name = "auto-train"
version = "0.1.0"
description = "Auto-train data management system"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "cryptography>=44.0.0",
    "pydantic>=2.10.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.19",
    "pillow>=11.0.0",
    "jinja2>=3.1.0",
    "aiofiles>=24.0.0",
    "httpx>=0.28.0",
]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.ruff]
line-length = 120
target-version = "py310"